k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      containers:
        - name: user-service-app-deployment
          image: kdmalviyan/user-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-app
spec:
  selector:
    app: user-service-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
